@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Only tell CopyFileFromBuild to copy files that which actually exist in the
+  distro. The latest version of that plugin now dies on missing files.
+
+
 0.75     2016-10-11
 
 - Added pod_coverage_also_private to pass more stuff to
